import java.util.ArrayList;

public class Nav {

    int age;

    public String username;

    public String password;

    // public FileIO fileIO = new FileIO();
    //private TextUI textUI = new TextUI();

    public ArrayList<Serie> series = new ArrayList();

    public ArrayList<Movie> movies = new ArrayList();

    public User user = new User;



    public void logout() {


    }

    private String signUp() {
        return null;
    }
}
