@startuml
'https://plantuml.com/class-diagram

class Main{
- static Nav nav
+ static void main()

}

class Nav {
+ File FileIO;
+ textUI;
+ ArrayList series
+ ArrayList movies
+ void logout()
- String signup()


}

Content --> Nav
Main <-- Nav



class textFileIO{
+ ArrayList <String> readtextSeries()
+ ArrayList <String> readtextFilm()
+ ArrayList <String> readtextUser()
+ String fileException()
}

class textUI{
- Scanne scan
+ String getUserInput(String msg)
+ int getUserInput(int msg)
+ ArrayList<String> getUserInput(String msg, int iterations)

}
class user{
- int age
- String username
- String password
- ArrayList watchedMovies
- ArrayList savedMovies
- static int ID
..
+ void login()
+ watchedMovies()
+ savedMovies()
+ void setwatchedMovies(ArrayList watchedMovies)
+ void setsavedMovies(ArrayList SavedMovies)
..
+ user(int age String username String password)


}




Nav <-- user
Nav <-- textFileIO
Nav <-- textUI

Content <--- Movie
Content <-down-  Serie

class Movie{
- Static int ID
+ int year
+ get String title()
+ int year()
+ get ArrayList category()
+ get float rating()
+ play ()
}

class Serie{
- static int ID
+ int startDate
+ int endDate
+ get String title()
+  int range(int startDate int endDate)
+ get ArrayList category()
+ get float rating()
+ ArrayList Season[][]
+ play (ArrayList Season[][])
+ play()
}


object textUser{
ID
}



object textFilm{
Name
Year
Category
Rating
}

object textSeries{
Name
startDate
endDate
Category
Rating
}



abstract Content{
+ String title
+ ArrayList category
+ Float rating
}


textFileIO <-- textFilm
textFileIO <-- textUser
textFileIO <-- textSeries

@enduml